0.02
 - Improve init() method in doc.
 - In Tags processing returns without HTML code in case of undefined table
   data.
 - Regen README file.
 - Remove check for existing data in init().
 - Update copyright years.
 - Update Module::Install to 1.21 version.

0.01 2022-11-09T16:08:46+01:00
 - First version.