@@ -132,8 +132,16 @@ EXAMPLE1
 
      # Output:
      # CSS
-     # .table table, .table th, .table td {
-     #         border: 1px solid black;
+     # .table, .table td, .table th {
+     #         border: 1px solid #ddd;
+     #         text-align: left;
+     # }
+     # .table {
+     #         border-collapse: collapse;
+     #         width: 100%;
+     # }
+     # .table th, .table td {
+     #         padding: 15px;
      # }
      #
      # HTML
@@ -203,15 +211,15 @@ EXAMPLE2
 
      # Output:
      # CSS
-     # table, td, th {
+     # .table, .table td, .table th {
      #         border: 1px solid #ddd;
      #         text-align: left;
      # }
-     # table {
+     # .table {
      #         border-collapse: collapse;
      #         width: 100%;
      # }
-     # th, td {
+     # .table th, .table td {
      #         padding: 15px;
      # }
      #
