@@ -1,4 +1,5 @@
 0.02
+ - Implement 'css_table' parameter to CSS style.
  - Improve init() method in doc.
  - In Tags processing returns without HTML code in case of undefined table
    data.
